Add 8th edition and ISBN for textbook.

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -42,7 +42,7 @@ of all course policies and information contained in the syllabus.
 <p>
 <img style="padding: 0px 20px 0px 0px;" align=left width=150 src="textbook-rao.jpg">
 <h3>Textbook</h3>
-<li>"Sams Teach Yourself C++ in One Hour a Day" by Siddhartha Rao
+<li>"Sams Teach Yourself C++ in One Hour a Day" by Siddhartha Rao (8th edition, ISBN 9780789757746)
 <li><a href="https://www.goodreads.com/book/show/30201483-sams-teach-yourself-c-in-one-hour-a-day">Reviews on goodreads</a>
 <li>To get a copy, check out your favorite library or bookstore, or try these
 <a href=" http://verbacompare.osubeaverstore.com/comparison?id=2020-Winter__CS__161__020">options from the OSU bookstore</a>
