--- a/TABios/index.html
+++ b/TABios/index.html
@@ -171,7 +171,7 @@
         <h3>Arthur York</h3>
         <div class="imgContainer"><img src="pics/arthur.jpg"></div>
         </div>
-        <p>My name is Arthur York, I am a junior majoring in computer science with the Systens option. I have been doing moleculr simulation research with a chemical engineer for two years and have been a TA for CS16X for one and a half years. If you have any questions about research or computer science at OSU feel free to ask!</p>
+        <p>My name is Arthur York, I am a junior majoring in computer science with the Systens option. I have been doing molecular simulation research with a chemical engineer for two years and have been a TA for CS16X for one and a half years. If you have any questions about research or computer science at OSU feel free to ask!</p>
     </div>
 
 	<div class="person">
