Fix link to programming style guidlines.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -26,7 +26,7 @@
     <div class="content">
         <div class="instructions">
 	  <p><b>Good programming style</b>: Please read and follow the
-	    <a style="color:#0000FF" href="../assignments/161_style_guideline.pdf">programming
+	    <a style="color:#0000FF" href="cs161-style-guidelines.pdf">programming
 	      style guidelines</a> for this class.</p>
 
 	  <p>Part of your grade for each assignment depends on 
