Add Linux/vim reference.

--- a/links/index.html
+++ b/links/index.html
@@ -63,8 +63,8 @@ call the National Suicide Prevention Lifeline at 1-800-273-TALK
 
         <h3>UNIX and Vim Documentation</h3>
 <ul>
-<li>
-<a href="unix_ref_card.pdf">UNIX Reference Card</a></li>
+<li><a href="OSU_linux_vim_ref.pdf">OSU ENGR Linux and vim reference</a></li>
+<li><a href="unix_ref_card.pdf">UNIX Reference Card</a></li>
 <li>
 <a href="Linux_cmd_ref.pdf">Linux Command Basics</a></li>
 <li>
