--- a/calendar/index.html
+++ b/calendar/index.html
@@ -45,7 +45,7 @@
         <td>What this class offers you,<br>
 	  what your responsibilities are,<br>
 	  and how we communciate with computers</td>
-        <td><a href="lecture1-W20.pdf">Lecture 1</a>
+        <td><a href="lecture1-W20.pdf">Lecture 1 slides</a>
 	</td>
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
@@ -65,7 +65,7 @@
         <td>How do we store information in a computer?<br>
 	  What is good programming style?
 	</td>
-        <td>Lecture 2<br>
+        <td>Lecture 2 slides<br>
 	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
@@ -80,7 +80,7 @@
 	  How do computers interact with users?<br>
 	  How do we calculate new information?<br>
 	  How do computers make decisions? (conditionals)</td>
-        <td>Lecture 3<br>
+        <td>Lecture 3 slides<br>
 	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
@@ -100,7 +100,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  How do computers make decisions? (conditionals)<br>
 	  How can we guard against user mistakes?
 	</td>
-        <td>Lecture 4</td>
+        <td>Lecture 4 slides</td>
         <td> 
 	  Rao Lesson 6 (pp. 113-127)<br>
 	</td>
@@ -110,7 +110,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Working with words and text (strings)<br>
 	  How can we catch and correct errors (bugs)?
 	</td>
-        <td>Lecture 5</td>
+        <td>Lecture 5 slides</td>
 	<td></td>
 	<td></td>
       </tr>
@@ -118,7 +118,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/17</td>
         <td>How can we do something over and over and over? (loops)<br>
 	</td>
-        <td>Lecture 6</td>
+        <td>Lecture 6 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -137,7 +137,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/22</td>
         <td>More ways to repeat computation with ease</td>
-        <td>Lecture 7</td>
+        <td>Lecture 7 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -148,7 +148,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>What do we do when things go wrong?<br>
 	  How can we use the same code in different places? (functions)
 	</td>
-        <td>Lecture 8</td>
+        <td>Lecture 8 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
         <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
     </tr>
@@ -159,7 +159,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/27</td>
         <td>How do functions make programming easier?
 	</td>
-        <td>Lecture 9</td>
+        <td>Lecture 9 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
@@ -167,7 +167,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/29</td>
         <td>Preparing for Midterm #1</td>
-         <td>Lecture 10</td>
+         <td>Lecture 10 slides</td>
         <td>
 <!--<a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
@@ -203,7 +203,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>02/05</td>
         <td>How can functions make permanent changes? (references)
-        <td>Lecture 11</td>
+        <td>Lecture 11 slides</td>
         <td>Rao Lesson 7 (pp. 166-167)<br>
         Rao Lesson 8 (pp. 205-208)<br>
 	</td>
@@ -213,7 +213,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>02/07</td>
         <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)
 	</td>
-        <td>Lecture 12</td>
+        <td>Lecture 12 slides</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
         Rao Lesson 8 (pp. 187-204)<br>
 	</td>
