Update calendar layout so slides and lecture topics and links are together.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -31,10 +31,9 @@
 <center>
 <table>
     <tr>
-        <th>Date</th>
-        <th width=30%>Lecture</th>
-        <th width=15%>Slides and Links</th>
-        <th width=20%>Assigned Reading</th>
+        <th width=10%>Date</th>
+        <th width=35%>Lecture</th>
+        <th width=30%>Assigned Reading</th>
         <th width=25%>Assignment Due Dates</th>
     </tr>
 	<tr>
@@ -44,8 +43,8 @@
         <td>01/06</td>
         <td>What this class offers you,<br>
 	  what your responsibilities are,<br>
-	  and how we communciate with computers</td>
-        <td><a href="lecture1-W20.pdf">Lecture 1 slides</a>
+	  and how we communciate with computers<br>
+	 <a href="lecture1-W20.pdf">Lecture 1 slides</a>
 	</td>
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
@@ -63,10 +62,10 @@
       <tr>
         <td>01/08</td>
         <td>How do we store information in a computer?<br>
-	  What is good programming style?
-	</td>
-        <td>Lecture 2 slides<br>
-	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+	  What is good programming style?<br>
+          Lecture 2 slides<br>
+	  Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a><br>
+	  Fun: <a href="https://www.ioccc.org/">International Obfuscated Code Contest</a><br>
 	</td>
         <td>
 	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
@@ -79,9 +78,9 @@
         <td>
 	  How do computers interact with users?<br>
 	  How do we calculate new information?<br>
-	  How do computers make decisions? (conditionals)</td>
-        <td>Lecture 3 slides<br>
-	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+	  How do computers make decisions? (conditionals)<br>
+          Lecture 3 slides<br>
+	  Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
 	  Rao Lesson 5 (pp. 85-110)<br>
@@ -98,9 +97,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/13</td>
         <td>
 	  How do computers make decisions? (conditionals)<br>
-	  How can we guard against user mistakes?
-	</td>
-        <td>Lecture 4 slides</td>
+	  How can we guard against user mistakes?<br>
+	  Lecture 4 slides</td>
         <td> 
 	  Rao Lesson 6 (pp. 113-127)<br>
 	</td>
@@ -108,17 +106,15 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/15</td>
         <td>Working with words and text (strings)<br>
-	  How can we catch and correct errors (bugs)?
-	</td>
-        <td>Lecture 5 slides</td>
+	  How can we catch and correct errors (bugs)?<br>
+          Lecture 5 slides</td>
 	<td></td>
 	<td></td>
       </tr>
       <tr>
         <td>01/17</td>
         <td>How can we do something over and over and over? (loops)<br>
-	</td>
-        <td>Lecture 6 slides</td>
+        Lecture 6 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -136,8 +132,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         </td></tr>
       <tr>
         <td>01/22</td>
-        <td>More ways to repeat computation with ease</td>
-        <td>Lecture 7 slides</td>
+        <td>More ways to repeat computation with ease<br>
+        Lecture 7 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -146,9 +142,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/24</td>
         <td>What do we do when things go wrong?<br>
-	  How can we use the same code in different places? (functions)
-	</td>
-        <td>Lecture 8 slides</td>
+	  How can we use the same code in different places? (functions)<br>
+          Lecture 8 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
         <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
     </tr>
@@ -157,17 +152,16 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>01/27</td>
-        <td>How do functions make programming easier?
-	</td>
-        <td>Lecture 9 slides</td>
+        <td>How do functions make programming easier?<br>
+        Lecture 9 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
       </tr>
       <tr>
         <td>01/29</td>
-        <td>Preparing for Midterm #1</td>
-         <td>Lecture 10 slides</td>
+        <td>Preparing for Midterm #1<br>
+        Lecture 10 slides</td>
         <td>
 <!--<a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
@@ -202,8 +196,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>02/05</td>
-        <td>How can functions make permanent changes? (references)
-        <td>Lecture 11 slides</td>
+        <td>How can functions make permanent changes? (references)<br>
+        Lecture 11 slides</td>
         <td>Rao Lesson 7 (pp. 166-167)<br>
         Rao Lesson 8 (pp. 205-208)<br>
 	</td>
@@ -211,9 +205,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>02/07</td>
-        <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)
-	</td>
-        <td>Lecture 12 slides</td>
+        <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)<br>
+        Lecture 12 slides</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
         Rao Lesson 8 (pp. 187-204)<br>
 	</td>
