--- a/calendar/index.html
+++ b/calendar/index.html
@@ -44,7 +44,7 @@
         <td>What this class offers you,<br>
 	  what your responsibilities are,<br>
 	  and how we communciate with computers<br>
-	 <a href="lecture1-W20.pdf">Lecture 1 slides</a>
+	 <li><a href="lecture1-W20.pdf">Lecture 1 slides</a>
 	</td>
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
@@ -63,9 +63,9 @@
         <td>01/08</td>
         <td>How do we store information in a computer?<br>
 	  What is good programming style?<br>
-          Lecture 2 slides<br>
-	  Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a><br>
-	  Fun: <a href="https://www.ioccc.org/">International Obfuscated Code Contest</a><br>
+	 <li> <a href="lecture2-W20.pdf">Lecture 2 slides</a><br>
+	 <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a><br>
+	 <li>Fun: <a href="https://www.ioccc.org/">International Obfuscated C Code Contest</a><br>
 	</td>
         <td>
 	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
@@ -78,9 +78,8 @@
         <td>
 	  How do computers interact with users?<br>
 	  How do we calculate new information?<br>
-	  How do computers make decisions? (conditionals)<br>
-          Lecture 3 slides<br>
-	  Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+          <li>Lecture 3 slides<br>
+	  <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
 	  Rao Lesson 5 (pp. 85-110)<br>
@@ -98,7 +97,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>
 	  How do computers make decisions? (conditionals)<br>
 	  How can we guard against user mistakes?<br>
-	  Lecture 4 slides</td>
+	  <li>Lecture 4 slides</td>
         <td> 
 	  Rao Lesson 6 (pp. 113-127)<br>
 	</td>
@@ -107,14 +106,14 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/15</td>
         <td>Working with words and text (strings)<br>
 	  How can we catch and correct errors (bugs)?<br>
-          Lecture 5 slides</td>
+          <li>Lecture 5 slides</td>
 	<td></td>
 	<td></td>
       </tr>
       <tr>
         <td>01/17</td>
         <td>How can we do something over and over and over? (loops)<br>
-        Lecture 6 slides</td>
+        <li>Lecture 6 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -133,7 +132,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/22</td>
         <td>More ways to repeat computation with ease<br>
-        Lecture 7 slides</td>
+        <li>Lecture 7 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -143,7 +142,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/24</td>
         <td>What do we do when things go wrong?<br>
 	  How can we use the same code in different places? (functions)<br>
-          Lecture 8 slides</td>
+          <li>Lecture 8 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
         <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
     </tr>
@@ -153,7 +152,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/27</td>
         <td>How do functions make programming easier?<br>
-        Lecture 9 slides</td>
+        <li>Lecture 9 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
@@ -161,7 +160,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/29</td>
         <td>Preparing for Midterm #1<br>
-        Lecture 10 slides</td>
+        <li>Lecture 10 slides</td>
         <td>
 <!--<a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
@@ -197,7 +196,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>02/05</td>
         <td>How can functions make permanent changes? (references)<br>
-        Lecture 11 slides</td>
+        <li>Lecture 11 slides</td>
         <td>Rao Lesson 7 (pp. 166-167)<br>
         Rao Lesson 8 (pp. 205-208)<br>
 	</td>
@@ -206,7 +205,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>02/07</td>
         <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)<br>
-        Lecture 12 slides</td>
+        <li>Lecture 12 slides</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
         Rao Lesson 8 (pp. 187-204)<br>
 	</td>
