Add design topic to lecture 4.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -96,6 +96,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/13</td>
         <td>
 	  How do computers make decisions? (conditionals)<br>
+	  How to design a program before writing code<br>
 	  How can we guard against user mistakes?<br>
 	  <li>Lecture 4 slides</td>
         <td> 
