--- a/calendar/index.html
+++ b/calendar/index.html
@@ -63,9 +63,12 @@
         <td>01/08</td>
         <td>How do we store information in a computer?<br>
 	  What is good programming style?<br>
-	 <li> <a href="lecture2-W20.pdf">Lecture 2 slides</a><br>
-	 <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a><br>
-	 <li>Fun: <a href="https://www.ioccc.org/">International Obfuscated C Code Contest</a><br>
+	 <li> <a href="lecture2-W20.pdf">Lecture 2 slides</a>
+	 <li>Code demo: <a href="demos/lec2-hello.cpp">lec2-hello.cpp</a>
+	 <li>Code demo: <a href="demos/lec2-hello-ugly.cpp">lec2-hello-ugly.cpp</a>
+	 <li>Code demo: <a href="demos/lec2-vars.cpp">lec2-vars.cpp</a>
+	 <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+	 <li>Fun: <a href="https://www.ioccc.org/">International Obfuscated C Code Contest</a>
 	</td>
         <td>
 	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
