Adjust reading assignments.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -85,7 +85,7 @@
 	  <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
-	  Rao Lesson 5 (pp. 85-110)<br>
+	  Rao Lesson 5 (pp. 85-91, 104-111)<br>
 or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf">MIT Lecture 2</a> 
         </td>
 	<td><a href="../assignments/assign1-W20-fortune.pdf">
@@ -103,6 +103,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  How can we guard against user mistakes?<br>
 	  <li>Lecture 4 slides</td>
         <td> 
+	  Rao Lesson 5 (pp. 92-100)<br>
 	  Rao Lesson 6 (pp. 113-127)<br>
 	</td>
       </tr>
