--- a/calendar/index.html
+++ b/calendar/index.html
@@ -81,7 +81,8 @@
         <td>
 	  How do computers interact with users?<br>
 	  How do we calculate new information?<br>
-          <li>Lecture 3 slides<br>
+          <li><a href="lecture3-W20.pdf">Lecture 3 slides</a><br>
+	  <li>Code demo: <a href="demos/lec3-const.cpp">lec3-const.cpp</a>
 	  <li>Practice: <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
 	</td>
         <td>
