Memrise is not for a grade.

--- a/labs/index.html
+++ b/labs/index.html
@@ -36,7 +36,7 @@
         <table class="assignments">
             <tr>
                 <td>Lab #1 - <a href="lab1-W20.pdf">Off to a Good Start</a><br>
-		  <p>For more practice:</p>
+		  <p>For more practice (for fun and learning, not a course grade):</p>
 		  <ul>
 		    <li>Learn + practice your linux knowledge:
 		      <a href="https://www.memrise.com/course/488100/linux-commands-5/2/">Terminal commands (Memrise)</a></li>
