Add link to Lab 2.

--- a/labs/index.html
+++ b/labs/index.html
@@ -48,7 +48,8 @@
 		</td>
             </tr>
             <tr>
-                <td>Lab #2 - <!-- <a href="CS_161_W19_Lab_WS_2.pdf">Worksheet: Design</a> and <a href="Lab2-Student-W19.pdf">Hands-on: More Linux, Conditionals, and rand()</a> --></td>
+                <td>Lab #2 - <a href="lab2-W20.pdf">Random Numbers and Conditionals</a>
+		</td>
             </tr>
             <tr>
                 <td>Lab #3 - <!-- <a href="Lab3-Student-W19.pdf">Take Home Quiz, Worksheet, and Hands-on Design/Implementation Loops</a> --></td>
