Add design and peer review guidelines link.

--- a/links/index.html
+++ b/links/index.html
@@ -24,6 +24,7 @@
         <h2>Useful Links</h2>
         <h3><!--<a href="program_layout.pdf">C/C++ Program Layout</a><br>-->
 	  <a href="../assignments/cs161-style-guidelines.pdf">CS 161 Style Guidelines</a><br>
+	  <a href="../assignments/cs161-design-review-guidelines.pdf">CS 161 Design and Peer Review Guidelines</a><br>
 	  <font color=red>
 	    Turn in assignments: 
 	  <a href="https://oregonstate.instructure.com/courses/1771939">
