Add Sabrina's bio.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -25,6 +25,17 @@
     <div class="taContainer">
 
 <!-- grad TAs -->
+
+        <div class="person">
+            <div class="namePhoto">
+                <h3>Sabrina Jesmin</h3>
+                <div class="imgContainer"><img src="pics/sabrina.jpg"></div>
+            </div>
+            <p>
+	      Hi! I am Sabrina Jesmin. I am doing my Ph.D. in CS and Graduate Teaching Assistant for this course. Photography and painting is my hobby. My greatest joy lies to see you become great coders. I will be there for any help regarding the course issues. Best of luck for the course! 
+            </p>
+        </div>
+
         <div class="person">
             <div class="namePhoto">
                 <h3>Yipeng Song (Roger)</h3>
