Update formatting of assignments table.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -79,12 +79,20 @@
         </div>
         <table class="assignments">
             <tr>
-                <td>Assignment #1 - <a href="assign1-W20-fortune.pdf">
-		    Fortune Teller</a>, due Jan. 12 at 11:59 p.m.</td> 
+                <td valign=top>Assignment #1 -</td>
+		<td><a href="assign1-W20-fortune.pdf">
+		    Fortune Teller: Variables and Input/Output</a>, <br>
+		  Assignment due Jan. 12 at 11:59 p.m.</td> 
             </tr>
             <tr>
-                <td>Assignment #2 -</td>
-                <!-- <td><a href="assign2-w19.pdf">Text Adventure: Variables and Conditionals</a></td> -->
+                <td valign=top>Assignment #2 -</td>
+		<td><a href="assign2-W20-adventure.pdf">
+		    Text Adventure Game: Variables, Conditionals, and 
+		    Random Numbers</a>;<br>
+		  Design due Jan. 19 at 11:59 p.m., <br>
+		  Peer Review due Jan. 22 at 11:59 p.m.,<br>
+		  Assignment due Jan. 26 at 11:59 p.m.
+		</td>
             </tr>
             <tr>
                 <td>Assignment #3 -</td>
