Add links to Assignment 2 and Canvas/TEACH links for submission.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -123,7 +123,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
-	<td>Assignment #2 Design due Sunday, 1/19 by 11:59 p.m. (Canvas)</td>
+	<td><a href="../assignments/assign1-W20-fortune.pdf">
+	    Assignment #2 Design</a> due Sunday, 1/19 by 11:59 p.m. 
+	  (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7779088">Canvas</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="5">Week #3 <hr></td>
@@ -142,7 +144,10 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Rao Lesson 6 (pp. 128-142)<br>
             <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
-	<td>Assignment #2 Peer Review due Wednesday, 01/22 by 11:59 p.m. (Canvas)</td>
+	<td><a href="../assignments/assign1-W20-fortune.pdf">
+	    Assignment #2 Peer Review</a>
+	  due Wednesday, 01/22 by 11:59 p.m. 
+	  (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7779088">Canvas</a>)</td>
       </tr>
       <tr>
         <td>01/24</td>
@@ -150,7 +155,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  How can we use the same code in different places? (functions)<br>
           <li>Lecture 8 slides</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
-        <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
+        <td><a href="../assignments/assign1-W20-fortune.pdf">
+	    Assignment #2</a> due Sunday, 01/26 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
     </tr>
       <tr>
         <td class="weekBreak" colspan="5">Week #4 <hr></td>
