Add link to lecture 4 slides and lecture 5 reading.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -102,7 +102,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  How do computers make decisions? (conditionals)<br>
 	  How to design a program before writing code<br>
 	  How can we guard against user mistakes?<br>
-	  <li>Lecture 4 slides</td>
+	  <li><a href="lecture4-W20.pdf">Lecture 4 slides</a><br>
+	  <li>Code demo: <a href="demos/lec4-ifthen.cpp">lec4-ifthen.cpp</a>
+	</td>
         <td> 
 	  Rao Lesson 5 (pp. 92-100)<br>
 	  Rao Lesson 6 (pp. 113-127)<br>
@@ -113,7 +115,10 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Working with words and text (strings)<br>
 	  How can we catch and correct errors (bugs)?<br>
           <li>Lecture 5 slides</td>
-	<td></td>
+	<td>
+	  Rao pp. 40 (Booleans) and 41 (characters)<br>
+	  Rao pp. 79-81 (strings)<br>
+	</td>
 	<td></td>
       </tr>
       <tr>
@@ -121,7 +126,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>How can we do something over and over and over? (loops)<br>
         <li>Lecture 6 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
+<!-- <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
+	    <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
 	<td><a href="../assignments/assign2-W20-adventure.pdf">
 	    Assignment #2 Design</a> due Sunday, 1/19 by 11:59 p.m. 
