Add proficiency demo lines.

--- a/labs/index.html
+++ b/labs/index.html
@@ -58,7 +58,8 @@
                 <td>Lab #4 - <!-- <a href="Lab4-Student-W19.pdf">Worksheet and Hands-on Design/Implementation Loops w/ Function</a> --></td>
             </tr>
             <tr>
-                <td>Lab #5 - <!-- <a href="Lab5-Student-W19.pdf">Proficiency Demo Practice &amp Value-Returning and Passing Arguments to Functions </a> --></td>
+                <td>Lab #5 - Practice Proficiency Demo
+<!-- <a href="Lab5-Student-W19.pdf">Proficiency Demo Practice &amp Value-Returning and Passing Arguments to Functions </a> --></td>
             </tr>
             <tr>
                 <td>Lab #6 - <!-- <a href="Lab6-Student-W19.pdf">Worksheet on Pass by Reference to Functions &amp; Recursion/Hands-on Work on Assignment 4</a> --></td>
@@ -73,7 +74,7 @@
                 <td>Lab #9 - <!-- <a href="Lab9-Student-W19.pdf">Towers of Hanoi: Two Dimensional Arrays with Recursion</a> --></td>
             </tr>
             <tr>
-                <td>Lab #10 - </td>
+                <td>Lab #10 - Proficiency Demo: Show us what you've learned!
                 <!-- <td>WEEK 10 Proficiency Demos &amp; Work on Assignment #6 with remaining time.</td> -->
             </tr>
         </table>
