--- a/calendar/index.html
+++ b/calendar/index.html
@@ -148,7 +148,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>More ways to repeat computation with ease<br>
         <li>Lecture 7 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
+          <!--  <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
+	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
 	<td><a href="../assignments/assign2-W20-adventure.pdf">
 	    Assignment #2 Peer Review</a>
