Update topics and reading assignments.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -112,20 +112,28 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>01/15</td>
-        <td>Working with words and text (strings)<br>
-	  How can we catch and correct errors (bugs)?<br>
+        <td>
+	  More decision making (conditional statements)<br>
+	  Assignment 2 Design and testing<br>
+	  How do we handle invalid input?<br>
+	  How can we generate random numbers?<br>
           <li>Lecture 5 slides</td>
 	<td>
-	  Rao pp. 40 (Booleans) and 41 (characters)<br>
-	  Rao pp. 79-81 (strings)<br>
+	  Rao pp. 40 (Booleans)<br>
+	  Rao pp. 41 (characters)<br>
+	  Rao pp. 122-125 (switch statement)<br>
+	  <a href="http://www.cplusplus.com/reference/cstdlib/rand/">Random numbers</a><br>
 	</td>
 	<td></td>
       </tr>
       <tr>
         <td>01/17</td>
         <td>How can we do something over and over and over? (loops)<br>
+	  Working with words and text (strings)<br>
+	  How can we catch and correct errors (bugs)?<br>
         <li>Lecture 6 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
+	  Rao pp. 79-81 (strings)<br>
 <!-- <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
 	    <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
