--- a/calendar/index.html
+++ b/calendar/index.html
@@ -117,7 +117,14 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  Assignment 2 Design and testing<br>
 	  How do we handle invalid input?<br>
 	  How can we generate random numbers?<br>
-          <li>Lecture 5 slides</td>
+	  <li><a href="lecture5-W20.pdf">Lecture 5 slides</a><br>
+	  <li>Code demo: <a href="demos/lec5-ifthen-ex2-interactive.cpp">
+	      lec5-ifthen-ex2-interactive.cpp</a>
+	  <li>Code demo: <a href="demos/lec5-ifthen-ex3.cpp">lec5-ifthen-ex3.cpp</a>
+	  <li>Code demo: <a href="demos/lec5-else.cpp">lec5-else.cpp</a>
+	  <li>Code demo: <a href="demos/lec5-scope.cpp">lec5-scope.cpp</a><br> (will cause a compiler error)
+	  <li>Code demo: <a href="demos/lec5-scope-fixed.cpp">lec5-scope-fixed.cpp</a><br> (the error is fixed!)
+	  <li>Code demo: <a href="demos/lec5-rand.cpp">lec5-rand.cpp</a>
 	<td>
 	  Rao pp. 40 (Booleans)<br>
 	  Rao pp. 41 (characters)<br>
@@ -129,12 +136,16 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/17</td>
         <td>How can we do something over and over and over? (loops)<br>
+	  More decision making (conditional statements)<br>
 	  Working with words and text (strings)<br>
-	  How can we catch and correct errors (bugs)?<br>
-        <li>Lecture 6 slides</td>
+	  Generating better random numbers<br>
+        <li>Lecture 6 slides<br>
+	</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
 	  Rao pp. 79-81 (strings)<br>
 <!-- <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
+	  <a href="http://www.cplusplus.com/reference/ctime/time/">time()</a><br>
+	  <a href="https://en.cppreference.com/w/cpp/language/escape">Escape sequences</a><br>
 	    <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
 	<td><a href="../assignments/assign2-W20-adventure.pdf">
@@ -153,7 +164,8 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         </td></tr>
       <tr>
         <td>01/22</td>
-        <td>More ways to repeat computation with ease<br>
+        <td>More ways to repeat computation with ease (loops)<br>
+	  How can we catch and correct errors (bugs)?<br>
         <li>Lecture 7 slides</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
           <!--  <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
