Update calendar with Lecture 6 content.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -140,6 +140,20 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  Working with words and text (strings)<br>
 	  Generating better random numbers<br>
         <li>Lecture 6 slides<br>
+	  <li>Code demo: <a href="demos/lec6-string.cpp">lec6-string.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-string-concat.cpp">
+	      lec6-string-concat.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-switch.cpp">lec6-switch.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-switch2.cpp">lec6-switch2.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-rand.cpp">lec6-rand.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-rand-seed.cpp">
+	      lec6-rand-seed.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-rand-seed-for.cpp">
+	      lec6-rand-seed-for.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-rand-seed-while.cpp">
+	      lec6-rand-seed-while.cpp</a>
+	  <li>Code demo: <a href="demos/lec6-rand-seed-do-while.cpp">
+	      lec6-rand-seed-do-while.cpp</a>
 	</td>
         <td>Rao Lesson 6 (pp. 128-142)<br>
 	  Rao pp. 79-81 (strings)<br>
