Link to Lecture 6 slides.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -139,7 +139,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  More decision making (conditional statements)<br>
 	  Working with words and text (strings)<br>
 	  Generating better random numbers<br>
-        <li>Lecture 6 slides<br>
+        <li><a href="lecture6-W20.pdf">Lecture 6 slides</a><br>
 	  <li>Code demo: <a href="demos/lec6-string.cpp">lec6-string.cpp</a>
 	  <li>Code demo: <a href="demos/lec6-string-concat.cpp">
 	      lec6-string-concat.cpp</a>
