Add link to Lab 3.

--- a/labs/index.html
+++ b/labs/index.html
@@ -52,7 +52,7 @@
 		</td>
             </tr>
             <tr>
-                <td>Lab #3 - <!-- <a href="Lab3-Student-W19.pdf">Take Home Quiz, Worksheet, and Hands-on Design/Implementation Loops</a> --></td>
+                <td>Lab #3 - <a href="lab3-W20.pdf">Design and Loops</a>
             </tr>
             <tr>
                 <td>Lab #4 - <!-- <a href="Lab4-Student-W19.pdf">Worksheet and Hands-on Design/Implementation Loops w/ Function</a> --></td>
