Add link to file restore instructions.

--- a/links/index.html
+++ b/links/index.html
@@ -53,6 +53,7 @@
 <li> <a href="https://piazza.com/class/k4eslq3v74a11q">Ask questions on Piazza</a>
 <li> <a href="https://engineering.oregonstate.edu/current-students/academic-support/undergraduate-tutoring">Use OSU tutoring hours (starts week 2, scroll down to "CS and ECE Course Tutoring")</a> 
 - get <b>extra credit</b> for your first visit!
+<li> How to <a href="https://it.engineering.oregonstate.edu/restore-using-snapshots">restore a file from backup/snapshot</a>
 <li> <a href="https://eecs.oregonstate.edu/eecs-it/">Get technical help from EECS IT </a></li>
 <li>Learn about resources for wellness and academic success at
 <a href="http://oregonstate.edu/ReachOut">ReachOut</a>.  </li>
