Flesh out the rest of the term.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -37,7 +37,7 @@
         <th width=25%>Assignment Due Dates</th>
     </tr>
 	<tr>
-        <td class="weekBreak" colspan="5">Week #1 <hr></td>
+        <td class="weekBreak" colspan="4">Week #1 <hr></td>
     </tr>
       <tr>
         <td>01/06</td>
@@ -75,6 +75,7 @@
 	  or 
           <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL2.html">Miller Lecture 2</a> 
         </td>
+	<td></td>
       </tr>
       <tr>
         <td>01/10</td>
@@ -94,7 +95,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #2 <hr></td>
+        <td class="weekBreak" colspan="4">Week #2 <hr></td>
       </tr>
       <tr>
         <td>01/13</td>
@@ -109,6 +110,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  Rao Lesson 5 (pp. 92-100)<br>
 	  Rao Lesson 6 (pp. 113-127)<br>
 	</td>
+	<td></td>
       </tr>
       <tr>
         <td>01/15</td>
@@ -167,21 +169,20 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7779088">Canvas</a>)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #3 <hr></td>
+        <td class="weekBreak" colspan="4">Week #3 <hr></td>
       </tr>
       <tr>
         <td>01/20</td>
         <td>No School, Martin Luther King, Jr. Day</td>
         <td></td>
         <td></td>
-        <td>
-        </td></tr>
+      </tr>
       <tr>
         <td>01/22</td>
         <td>More ways to repeat computation with ease (loops)<br>
 	  How can we catch and correct errors (bugs)?<br>
         <li>Lecture 7 slides</td>
-        <td>Rao Lesson 6 (pp. 128-142)<br>
+        <td>Rao Lesson 6 (pp. 128-145)<br>
           <!--  <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
@@ -201,7 +202,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
     </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #4 <hr></td>
+        <td class="weekBreak" colspan="4">Week #4 <hr></td>
       </tr>
       <tr>
         <td>01/27</td>
@@ -210,6 +211,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
+        <td></td>
       </tr>
       <tr>
         <td>01/29</td>
@@ -222,6 +224,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 		<a href="cs161exam1_w17_1_ans.pdf">Past Exam Answers for Study Sessions</a>
 -->
         </td>
+        <td></td>
       </tr>
       <tr>
         <td>01/31</td>
@@ -232,11 +235,12 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Assignment #3 Design due Sunday, 02/02, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #5 <hr></td>
+        <td class="weekBreak" colspan="4">Week #5 <hr></td>
       </tr>
       <tr>
         <td>02/03</td>
-        <td>What we learned from Midterm #1</td>
+        <td>What we learned from Midterm #1<br>
+          <li>Lecture 11 slides</td>
         <td>
 <!--
 <a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
@@ -248,154 +252,159 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>02/05</td>
         <td>How can functions make permanent changes? (references)<br>
-        <li>Lecture 11 slides</td>
+        <li>Lecture 12 slides</td>
         <td>Rao Lesson 7 (pp. 166-167)<br>
-        Rao Lesson 8 (pp. 205-208)<br>
+          Rao Lesson 8 (pp. 205-208)<br>
 	</td>
 	<td>Assignment #3 Peer Review due Wednesday, 02/05 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
         <td>02/07</td>
-        <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)<br>
-        <li>Lecture 12 slides</td>
+        <td>Adapting when data storage isn't known in advance (dynamic memory allocation and pointers)<br>
+        <li>Lecture 13 slides</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
         Rao Lesson 8 (pp. 187-204)<br>
 	</td>
 	<td>Assignment #3 due Sunday, 02/09 by 11:59 p.m. (TEACH)</td>
       </tr>
-<tr><td class="weekBreak" colspan=5>More to come!</td></tr>
-<!--
       <tr>
-        <td class="weekBreak" colspan="5">Week #6 <hr></td>
+        <td class="weekBreak" colspan="4">Week #6 <hr></td>
       </tr>
       <tr>
         <td>02/10</td>
-        <td>Finish Functions, Introduce C++ References vs. Pointers</td>
-         <td> <a href="slide11-w19.pdf">Lecture 11</a></td>
-        <td> <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec03.pdf">MIT/Lecture 3</a></td>
+        <td>More dynamic memory skills<br>
+	  <li>Lecture 14 slides</td>
+        <td>Rao Lesson 8 (pp. 177-186)<br>
+          Rao Lesson 8 (pp. 187-204)<br>
+	</td>
+        <td></td>
       </tr>
       <tr>
         <td>02/12</td>
-        <td>Demostrate C++ References vs. Pointers</td>
-         <td> <a href="slide12-w19.pdf"></a></td>
-        <td>
+        <td>Structured data: 1-dimensional arrays and strings<br>
+	  How to read and write to files<br>
+          <li>Lecture 15 slides</td>
+        <td>Rao Lesson 4 (pp. 63-70, 76-77)<br>
+	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>
         </td>
-		</tr>
+        <td></td>
+      </tr>
       <tr>
         <td>02/14</td>
-        <td>Recursion/Memory Model</td>
-        <td> <a href="slide13-w19.pdf">Lecture 13</a></td>
-        <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec05.pdf">MIT/Lecture 5</a>
-        </td>
+        <td>Dynamic arrays and using arrays with functions<br>
+          <li>Lecture 16 slides</td>
+        <td>Rao Lesson 4 (pp. 75-76)</td>
         <td>Assignment #4 Design due Sunday, 02/16, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #7 <hr></td>
+        <td class="weekBreak" colspan="4">Week #7 <hr></td>
       </tr>
       <tr>
         <td>02/17</td>
-        <td>Finish Recursion/Memory Model</td>
-        <td> <a href="slide14-w19.pdf">Lecture 14</a></td>
-        <td>
-        </td>
-		</tr>
+        <td>Multidimensional arrays<br>
+          <li>Lecture 17 slides</td>
+	<td>Rao Lesson 4 (pp. 71-74)<br>
+	  Rao Lesson 6 (pp. 145-146)</td>
+        <td></td>
+      </tr>
       <tr>
         <td>02/19</td>
-        <td>Intro to 1D Arrays/C-style strings</td>
-        <td> <a href="slide15-w19.pdf">Lecture 15</a></td>
-        <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec04.pdf">MIT/Lecture 4</a>
-        </td>
+        <td>Create your own data types!<br>   <!-- structs and objects -->
+          <li>Lecture 18 slides</td>
+	<!-- classes, constructors, copy constructors -->
+        <td>Rao Lesson 9 (pp. 215-233, 237-245)</td> 
 	<td>Assignment #4 Peer Review due Wednesday, 02/19 by 11:59 p.m. (Canvas)</td>
-		</tr>
+      </tr>
       <tr>
         <td>02/21</td>
-        <td>C vs. C++, How to Pass arrays</td>
-        <td> <a href="slide16-w19.pdf">Lecture 16</a></td>
-        <td>
-        </td>
-		<td>Assignment #4 due Sunday, 02/23 by 11:59 p.m. (TEACH)</td>
-		</tr>
+        <td>Destroy your own data types!<br>
+	  <li>Lecture 19 slides</td>
+	<!-- destructors, this, sizeof, structs -->
+        <td>Rao Lesson 9 (pp. 233-237, 246-258)</td>
+	<td>Assignment #4 due Sunday, 02/23 by 11:59 p.m. (TEACH)</td>
+      </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #8 <hr></td>
+        <td class="weekBreak" colspan="4">Week #8 <hr></td>
       </tr>
       <tr>
         <td>02/24</td>
-        <td>Finish arrays/C++ vs. C-style strings</td>
-        <td> <a href="slide17-w19.pdf">Lecture 17</a></td>
-        <td>
+        <td>Divide and conquer: recursion<br>
+          <li>Lecture 20 slides</td>
+        <td>Rao Lesson 7 (pp. 159-161)<br>
+	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a>
         </td>
-		</tr>
+        <td></td>
+      </tr>
       <tr>
         <td>02/26</td>
-        <td>Static vs. Dynamic Multi-dimensional arrays</td>
-        <td> <a href="slide18-w19.pdf">Lecture 18</a></td>
-		</tr>
+        <td>Preparing for Midterm #2<br>
+	  <li>Lecture 21 slides</td>
+	<td></td>
+        <td></td>
+      </tr>
       <tr>
         <td>02/28</td>
-        <td>Command Line Arguements</td>
-        <td> <a href="slide19-w19.pdf">Lecture 19</a></td>
-        <td>
-        </td>
+        <td>Midterm #2</td>
+        <td></td>
         <td>Assignment #5 Design due Sunday, 03/01, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #9 <hr></td>
+        <td class="weekBreak" colspan="4">Week #9 <hr></td>
       </tr>
       <tr>
         <td>03/02</td>
-        <td>Exam II Review</td>
+        <td>What we learned from Midterm #2<br>
+	  <li>Lecture 22 slides</td>
+	  <!--
         <td><a href="CS_161_Exam_II_Winter_2018_FORM_1_Key.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161_exam2.pdf">Past Exam for Study Sessions</a></td>
         <td><a href="CS_161_Exam_II_Winter_2018_FORM_1_Key_ans.pdf">Past Exam Answers for Class Review</a><p> 
 		<a href="cs161_exam2-ans.pdf">Past Exam Answers for Study Sessions</a></td> 
-        <td>
-            Review        
-		</td>
+        <td><a href="CS 161 Exam II Winter 2019 Form1.pdf">Exam II</a></td>
+        <td><a href="CS 161 Exam II Winter 2019 Form1 ans.pdf">Exam II Answers</a></td>
+-->
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>03/04</td>
-        <td>Exam II</td>
-        <td><a href="cs161_exam2.pdf"></a></td>
-        <td><a href="cs161_exam2-ans.pdf"></a></td>
+        <td>Recursion again and again and again<br>
+	  <li>Lecture 23 slides</td>
+	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td>Assignment #5 Peer Review due Wednesday, 03/04 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
         <td>03/06</td>
-        <td>Exam II Results</td>
-        <td><a href="CS 161 Exam II Winter 2019 Form1.pdf">Exam II</a></td>
-        <td><a href="CS 161 Exam II Winter 2019 Form1 ans.pdf">Exam II Answers</a></td>
-        </td>
-		<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
-		</tr>
+        <td>Command-line arguments<br>
+	  <li>Lecture 24 slides</td>
+	<td></td>
+	<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
+      </tr>
       <tr>
-        <td class="weekBreak" colspan="5">Week #10 <hr></td>
+        <td class="weekBreak" colspan="4">Week #10 <hr></td>
       </tr>
       <tr>
         <td>03/09</td>
-        <td>Command-Line Arguments</td>
-        <td> <a href="slide19-w19.pdf">Lecture 19</a></td>
-        <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec07.pdf">MIT/Lecture 7</a>
-        </td>
-		</tr>
+        <td>C++ Progams in Space<br>
+	  <li>Lecture 25 slides</td>
+        <td></td>
+        <td></td>
+      </tr>
       <tr>
         <td>03/11</td>
-        <td>2-D/Command-Line Arguments Activity </td>
-        <td> <a href="slide20-w19.pdf">Lecture 20</a></td>
-        <td> </td>
+        <td>More adventures with objects<br>
+	  <li>Lecture 26 slides</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>03/13</td>
         <td>Closing Remarks, Preview of CS 162, Ask Me Anything</td>
         <td></td>
-		<td></td>
         <td></td>
       </tr>
--->
-	   <tr>
-             <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LINC 228</h2></td>
+<tr>
+  <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LINC 228</h2></td>
       </tr>
 </table>
 </center>
