Add midterm reviews to calendar.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -181,7 +181,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/22</td>
         <td>More ways to repeat computation with ease (loops)<br>
 	  How can we catch and correct errors (bugs)?<br>
-        <li>Lecture 7 slides</td>
+        <li><a href="lecture7-W20.pdf">Lecture 7 slides</a><br>
+	<li>Code demo: <a href="demos/lec7-loops.cpp">lec7-loops.cpp
+	</td>
         <td>Rao Lesson 6 (pp. 128-145)<br>
           <!--  <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; -->
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
@@ -225,6 +227,11 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 -->
         </td>
         <td></td>
+      </tr>
+      <tr>
+        <td>01/30</td>
+        <td colspan=3><b>Midterm #1 Review, 
+	6-7 p.m. in KEC 1001</b></td>
       </tr>
       <tr>
         <td>01/31</td>
@@ -341,6 +348,11 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  <li>Lecture 21 slides</td>
 	<td></td>
         <td></td>
+      </tr>
+      <tr>
+        <td>02/27</td>
+        <td colspan=3><b>Midterm #2 Review, 
+	6-7 p.m. in KEC 1001</b></td>
       </tr>
       <tr>
         <td>02/28</td>
